--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,7 @@
 name: 'Jarvis action status report action'
 description: 'Send action status telegram message'
 inputs:
-  report_to:
+  report-to:
     description: 'Chat to report'
     required: true
   token:
@@ -16,7 +16,7 @@ runs:
       uses: appleboy/telegram-action@v1.0.0
       if: success() || failure()
       with:
-        to: ${{ inputs.report_to }}
+        to: ${{ inputs.report-to }}
         token: ${{ inputs.token }}
         disable_notification: ${{ job.status == 'success' && true || false }}
         format: markdown
