use \[ 🟢 ] in status report

--- a/action.yml
+++ b/action.yml
@@ -22,5 +22,5 @@ runs:
         format: markdown
         disable_web_page_preview: true
         message: |
-          ${{ job.status == 'success' && '\[ 🟢 \]' || '\[ 🔴 \]' }} *${{ github.workflow }}:* [${{ job.status == 'success' && 'SUCCESS' || 'FAILURE' }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ steps.job-data.outputs.id }}) *${{ github.job }}* workflow, triggered by: _${{ github.actor }}_
+          ${{ job.status == 'success' && '\[ 🟢 ]' || '\[ 🔴 ]' }} *${{ github.workflow }}:* [${{ job.status == 'success' && 'SUCCESS' || 'FAILURE' }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/job/${{ steps.job-data.outputs.id }}) *${{ github.job }}* workflow, triggered by: _${{ github.actor }}_
           Ref: `${{ github.ref_name }}`, Repository: `${{ github.repository }}`
